Removed Adult from schedule selector; removed Referee Schedule from TopMenu; styling to fix min width (avoid menu wrapping

--- a/src/Cerad/Bundle/AppBundle/Resources/public/css/app.css
+++ b/src/Cerad/Bundle/AppBundle/Resources/public/css/app.css
@@ -403,6 +403,11 @@ variable, form, fieldset, blockquote, label, img
   color: black;
 }
 
+html
+{
+	min-width: 720px;
+}
+
 body
 {
   width: 100%;
